tests/ui/impl-trait/inference/in-defining-item/reveal-hidden-via-unwrapped-receiver.old.stderr
error[E0308]: mismatched types
  --> $DIR/reveal-hidden-via-unwrapped-receiver.rs:26:20
   |
LL |     let _: IShow = test(!n).show();
   |            -----   ^^^^^^^^^^^^^^^ expected `IShow`, found `OnIShow`
   |            |
   |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
